# pg_py-Lab1_2

./: .gitignore  main.py  pyproject.toml
scr/: config.py  create_table.py
